<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/andimages1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.senatorojonla.ubhs.Register"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_register">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/acct"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="29dp" />

            <EditText
                android:id="@+id/othernames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/acct"
                android:ems="10"
                android:hint="@string/othernames"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="75dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/acct"
                android:ems="10"
                android:hint="@string/username1"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="134dp" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sex" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="SelectSex"
                    android:text="@string/male"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    tools:layout_editor_absoluteX="99dp"
                    tools:layout_editor_absoluteY="196dp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="SelectSex"
                    android:text="@string/female"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    tools:layout_editor_absoluteX="189dp"
                    tools:layout_editor_absoluteY="196dp" />
            </RadioGroup>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/mail"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="232dp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contact_address"
                android:inputType="textMultiLine"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="291dp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/phone"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="345dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/pwor"
                android:ems="10"
                android:hint="@string/pword"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="391dp" />

            <Button
                android:id="@+id/registerr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:onClick="SignUp"
                android:text="@string/register2"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="446dp" />
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
